syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "api/grpc/v1/event_completion;event_completion_grpc_service";

message NotifyEventProcessedRequest {
  string tenant = 1;
  string entity = 2;
  string entityId = 3;
  string eventType = 4;
}

service EventCompletionGrpcService {
  rpc NotifyEventProcessed(NotifyEventProcessedRequest) returns (google.protobuf.Empty);
}